client/stylesheets.css
@font-face {
	font-family: "Montserrat-Light";
	src: url('./fonts/Montserrat-Light.otf');
}

@font-face {
	font-family: "Montserrat-UltraLight";
	src: url('./fonts/Montserrat-UltraLight.otf');
}

@font-face {
	font-family: "Montserrat-Regular";
	src: url('./fonts/Montserrat-Regular.otf');
}

@font-face {
	font-family: "Raleway Regular";
	src: url('./fonts/Montserrat-Regular.otf');
}

html {
    height:100% !important;
}

body {
	background-color: #fafafa;
	font-family: Raleway, 'Raleway Regular', sans-serif;
	overflow-y: hidden;
	overflow-x:hidden;
	height: 100% !important;
}

.wheelWrapper {
	position: relative;
}

#wheel {
	width: 100%;
/*	position: absolute;
	left: 10%;
	right: 10%;*/
		overflow-y:hidden;

	margin-left: 00px;
	-webkit-transition: all 6s cubic-bezier(0,.99,.44,1);
 	-moz-transition:    all 6 cubic-bezier(0,.99,.44,1);
	-o-transition:      all 6s cubic-bezier(0,.99,.44,1);
 	-ms-transition:     all 6s cubic-bezier(0,.99,.44,1);
	transition:         all 6s cubic-bezier(0,.99,.44,1); 
}

#spinButton {
    width: 100%;
    position: absolute;
    top: 33.5%;
    height: 32%;
    width: 32%;
    left: 34.5%;
	overflow: hidden;
	border-radius: 200px;
	background-color: white;
/*	background-image: url('reload.png');
	    background-repeat: no-repeat;
	 background-position: center; 
*/

	cursor: pointer;
	color: black;
	text-align: center;
	font-family: "Montserrat-Light";
	font-size: 20px;
	border: solid 12px #287bff;
	
	box-shadow: rgba(0, 0, 0, 0.2) 0px 0px 10px, rgba(0, 0, 0, 0.05) 0px 3px 0px;
	user-select: none;
    -moz-user-select: none;
    -khtml-user-select: none;
    -webkit-user-select: none;
    -o-user-select: none;
}

#spinButton:hover {
	border: solid 12px #4129e5;
	cursor: pointer;

/*	background:none;
*//*		background-image: url('reload-hover.png');
*/
}

#spinButton:active {
		border: solid 12px #1f0e92;
			cursor: pointer;


	
/*		    background-repeat: no-repeat;
	 background-position: center; 
	background-image: url('reload-hover.png');*/
}

#spinButton span {

	 display: grid;
    align-items: center;
    height: 100%;
/*	display: table-cell;
	vertical-align: middle;*/
	user-select: none;
    -moz-user-select: none;
    -khtml-user-select: none;
    -webkit-user-select: none;
    -o-user-select: none;
    font-size: 0.8em;
	/*opacity: 0;*/
}

#indicator {
/*	position: absolute;
	left: 50%;
	top: 281px;
	margin-left: 275px;
	width: 60px;
	height:38px;*/

    width: 100%;
    position: absolute;
/*    top: 33.5%;
    height: 32%;
    width: 32%;
    left: 85.5%;*/

    top: -18%;
    height: 32%;
    width: 32%;
    left: 34.5%;


/*	border-top: 5px solid transparent;
	border-bottom: 5px solid transparent;
	border-right: 30px solid black;*/
	background-image: url('/img/pin.png');
	 background-repeat: no-repeat;
	 background-position: center; 

}

@media (max-width: 576px) { 
	#indicator {
    background-size: 25%;
}
}

.settingsWrapper {
	text-align: center;
	font-family: "Montserrat-Regular";
	margin-top:60px;
	padding-top:20px;
}

.button {
	vertical-align: middle;
	display: inline-block;
	height: 36px;
	padding: 0 25px 0 25px;
	border-style: solid;
	border-width: 1px;
	-webkit-border-radius: 2px;
	-moz-border-radius: 2px;
	border-radius: 2px;
	color: white;
	font-size: 1em;
	line-height: 26px;
	cursor: pointer;
	font-weight: 500;
}

.button a {
	text-decoration: none;
}

.button-primary {
	border-color: #3b75d9;
	background-color: #3b75d9;
}

.button-primary:hover {
	border-color: #2c58a3;
	background-color: #2c58a3;
}

.button-primary:active {
	background-color: #204178;
	border-color: #204178;
}

.btn-icon {
	color:grey;
	text-decoration: none;
	cursor: pointer;
	padding:0.375rem 0.75rem;
}

.btn-icon:hover > i {
	color: grey;
}

.btn-icon:hover {
	color: black;
}

.spin {
  -webkit-animation: hh 0.1s; /* Chrome, Safari, Opera */
    animation: hh 0.1s;
}

/*ANIMATIONS*/

.winnerEffect {
	-webkit-transition: all 3s ease;
	-moz-transition: all 3s ease;
	-ms-transition: all 3s ease;
 	o-transition: all 3s ease;
	transition: all 3s ease;
 }

@-webkit-keyframes hh {
  0%, 100%{
    transform: rotate(0deg);
    -webkit-transform: rotate(0deg);
  }

  50%{
    transform: rotate(-20deg);
    -webkit-transform: rotate(-20deg);
  }
}

@keyframes hh {
   0%, 100%{
    transform: rotate(0deg);
    -webkit-transform: rotate(0deg);
  }

  50%{
    transform: rotate(-20deg);
    -webkit-transform: rotate(-20deg);
  }
}


/*.toast-center-center {
position: absolute;
top: 30%;
left: 50%;
-ms-transform: translateX(-50%) translateY(-50%);
-webkit-transform: translate(-50%,-50%);
transform: translate(-50%,-50%);
}

body #toast-container > div {
  opacity: .8;
  background-color: blue;
  padding:30px;
  text-align: center;
}*/

.wheel--winner {
	display:none;
/*	background: linear-gradient(#e66465, #9198e5);
*/	
	/*background-color: blue;*/
	text-align:center;
	color:white;
	opacity: 1;
    width: 80%;
    padding: 30px;
    position: absolute;
    left: 10%;
    top: 35.5%;
    z-index: 99999;
    font-size: 3em;

    width: 100%;
    height: 100%;
    z-index: 10;
    top: 0;
    left: 0;
    position: fixed;
    }

